--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,22 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    background-color: rgb(37, 37, 37);
+}
+
+#content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: rgb(122, 155, 155);
+    margin-top: 2%;
+    margin-left: 10%;
+    margin-right: 10%;
+    background-color: #f2f2f2; 
+    padding: 20px; 
+    border-radius: 10px 10px 10px 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
 }
 
 #container {
@@ -13,11 +29,33 @@ body {
     flex-direction: row;
     gap: 1px;
 }
-/* Add flex shrink to the squares with a max dimension
-*/
+
 .square {
     margin-top: 1px;
     background-color: black;
     flex: 1;
 }
 
+/* CSS styling for the button */
+button {
+    padding: 10px 20px; 
+    font-size: 16px; 
+    background-color: #4CAF50; 
+    color: white; 
+    border: none; 
+    border-radius: 5px; 
+    cursor: pointer; 
+    transition: background-color 0.3s; 
+}
+
+button:hover {
+    background-color: #45a049; 
+}
+
+#title {
+    font-size: 24px; 
+    font-weight: bold; 
+    text-align: center; 
+    margin-bottom: 20px; 
+    color: #333;
+}
